Fixed Search Bar.
Fixed the CSS for the search bar that was making it look weird.

--- a/css/forms.css
+++ b/css/forms.css
@@ -1,22 +1,21 @@
 .searchbox {
-	background: #600;        
+	background: #600;
+	border-radius: 5px;	
+	border-width: 1px;
+	border-style: solid;
+	border-color: #600;            
 	width: 300px;
-	height: 50px;
-	position:relative;
-    padding-right:10%;
-    float:right;
-	overflow: hidden; /* Clear floats */
-}
-
-.search, .submit {
-	float: left;
+	height: 45px;
+	padding: 10px;
+	margin: 100px auto 50px;
+	overflow: hidden;
 }
 
 .search {
-	padding: 10px 9px;
+	padding: 5px 9px;
 	background: #E8E6E3;
 	border-radius: 5px;
-    height: 10px;
+    height: 20px;
     width: 70%;
 }
 
@@ -25,7 +24,7 @@
 	background-image: linear-gradient(#996633, #774411);
 	border-radius: 5px;		
 	margin-left: 10px;
-    height: 35px; 
+    height: 20px; 
     color: #fff;
 }
 
